# devdocs-mcp-server

./: .gitignore  CHANGELOG.md  QWEN.md  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
devdocs_mcp_server/: __init__.py  cli.py  extract_docs.py  server.py
tests/: __init__.py  test_server.py
